--- a/template.yml
+++ b/template.yml
@@ -9,7 +9,7 @@ Metadata:
     SpdxLicenseId: MIT
     LicenseUrl: LICENSE.txt
     ReadmeUrl: README.md
-    Labels: ['lambda', 'cron']
+    Labels: ["lambda", "cron"]
     HomePageUrl: https://github.com/lumigo/SAR-Lambda-Janitor
     SemanticVersion: 1.5.0
     SourceCodeUrl: https://github.com/lumigo/SAR-Lambda-Janitor
@@ -19,7 +19,7 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       Handler: functions/clean.handler
-      Runtime: nodejs10.x
+      Runtime: nodejs12.x
       Timeout: 900
       Environment:
         Variables:
